reveler le mdp marche

--- a/site-courtier/front/src/assets/css/style.css
+++ b/site-courtier/front/src/assets/css/style.css
@@ -7,6 +7,11 @@ div{
 .mar2{
     margin-bottom: 3.34%;
 }
+.tglPwd{
+    cursor: pointer;
+    color: white;
+    margin-left: 1%;
+}
 /*body{
     background-image: url(../Login.png);
     background-repeat: no-repeat;
